Adjust swagger docs, added more tests
