# plugins/TranslationsApi/openapi/translations.yml
@@ -1,12 +1,12 @@
 openapi: 3.0.2
 info:
 paths:
-  /translations/{resourceUrl}:
-      get:
-        parameters:
+  /translations/{resourceUrlCode}:
+    get:
+      parameters:
         - description: Resource to filter.
           in: path
-          name: resourceUrl
+          name: resourceUrlCode
           required: true
           schema:
             type: string
@@ -52,58 +52,60 @@ paths:
             default: 1
             maximum: 100
             minimum: 1
-        responses:
-          '200':
-            content:
-              'application/json':
-                schema:
-                  items:
-                    $ref: '#/components/schemas/Translation'
-                  type: array
-            description: Success
-        tags:
+      responses:
+        '200':
+          content:
+            'application/json':
+              schema:
+                items:
+                  $ref: '#/components/schemas/Translation'
+                type: array
+          description: Success
+      tags:
         - Translations
-        summary: Get translations from a specified resource.
-      patch:
-        parameters:
-          - description: resource to add\update in.
-            in: path
-            name: resourceUrl
-            required: true
-            schema:
-              type: string
-        responses:
-          '200':
-            description: Success
-          '400':
-            description: Bad Request
-        tags:
-          - Translations
-        requestBody:
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PatchTranslations'
+      summary: Get translations from a specified resource.
+    patch:
+      parameters:
+        - description: resource to add\update in.
+          in: path
+          name: resourceUrl
           required: true
-        summary: Add or update translations.
-  /translations/{resourceUrl}/delete:
-      patch:
-        parameters:
-          - description: Delete a translation.
-            in: path
-            name: resourceUrl
-            required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Success
+        '400':
+          description: Bad Request
+      tags:
+        - Translations
+      requestBody:
+        content:
+          application/json:
             schema:
-              type: string
-        responses:
-          '200':
-            description: Success
-        tags:
-          - Translations
-        requestBody:
-          content:
-            application/json:
-              schema:
+              $ref: '#/components/schemas/PatchTranslations'
+        required: true
+      summary: Add or update translations.
+  /translations/{resourceUrl}/delete:
+    patch:
+      parameters:
+        - description: Delete a translation.
+          in: path
+          name: resourceUrl
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Success
+      tags:
+        - Translations
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
                 properties:
                   recordType:
                     description: Name of the resource associated to the translation.
@@ -121,11 +123,11 @@ paths:
                     description: The property name associated to the translation.
                     type: string
                 required:
-                - recordType
-                - locale
-                - propertyName
+                  - recordType
+                  - locale
+                  - propertyName
                 type: object
-        summary: Delete a specified translations.
+      summary: Delete a specified translations.
   /translations:
     x-hidden: true
     post:
@@ -151,51 +153,53 @@ paths:
         required: true
       summary: Add a Resource.
 components:
-    schemas:
-        Translation:
-          properties:
-            resource:
-              description: Name of the resource.
-              type: string
-            key:
-              description: a unique translation identifier.
-              type: string
-            locale:
-              description: The locale of the translation.
-              type: string
-            translation:
-              description: The translation sentence.
-              type: string
-          required:
-          - resource
-          - key
+  schemas:
+    Translation:
+      properties:
+        resource:
+          description: Name of the resource.
+          type: string
+        key:
+          description: a unique translation identifier.
+          type: string
+        locale:
+          description: The locale of the translation.
+          type: string
+        translation:
+          description: The translation sentence.
+          type: string
+      required:
+        - resource
+        - key
+        - locale
+        - translation
+      type: object
+    PatchTranslations:
+      type: array
+      items:
+        properties:
+          recordType:
+            description: Name of the resource associated to the translation.
+            type: string
+          recordID:
+            description: The recordID associated to the translation.
+            type: integer
+          recordKey:
+            description: The recordKey associated to the translation.
+            type: string
+          locale:
+            description: The locale associated to the translation.
+            type: string
+          propertyName:
+            description: The property name associated to the translation.
+            type: string
+          translation:
+            description: The translation sentence.
+            type: string
+        required:
+          - recordType
           - locale
+          - propertyName
           - translation
-          type: object
-        PatchTranslations:
-          properties:
-            recordType:
-              description: Name of the resource associated to the translation.
-              type: string
-            recordID:
-              description: The recordID associated to the translation.
-              type: integer
-            recordKey:
-              description: The recordKey associated to the translation.
-              type: string
-            locale:
-              description: The locale associated to the translation.
-              type: string
-            propertyName:
-              description: The property name associated to the translation.
-              type: string
-            translation:
-              description: The translation sentence.
-              type: string
-          required:
-            - recordType
-            - locale
-            - propertyName
-            - translation
-          type: object
+        type: object
 
